# comp25

./: exam.md  pairing.md
.github/workflows/: PR.yml  PRformat.yml  master.yml
EML/: .gitignore  .zanuda  EML.opam  dune-project  eml.opam
EML/examples/: example1.txt
EML/lib/: dune
EML/lib/backend/: dune  machine.ml  riscv.ml
EML/lib/backend/llvm_ir/: generator.ml
EML/lib/backend/ricsv/: analysis.ml  analysis.mli  architecture.ml  auxillary.ml  config.ml  generator.ml  peephole.ml
EML/lib/backend/rv64/: asm_pp.ml  codegen.ml  riscv.ml
EML/lib/frontend/: ast.ml  inferencer.ml  parser.ml
EML/lib/middleend/: anf.ml  anf_pp.ml  anf_tree.ml  cc.ml  inferencer.ml  ll.ml  resolve_builtins.ml
EML/lib/riskv/: codogen.ml
EML/lib/runtime/: dune  runtime.c
EML/lib/utils/: aux.ml  monads.ml  utils.ml
EML/test_qc/: dune
EML/tests/: Makefile  anf_tests.ml  dune  infer.t  inferencer_tests.ml  llvm.t  llvm_tests.ml  parser_tests.ml  riscv.t  riscv_peephole_tests.ml  riscv_tests.ml  tuple_tests.t
EML/tests/additional_tests/: custom_op_cat.ml  custom_op_right_assoc_diff.ml
