(rule
 (targets rv64_runtime.o)
 (deps runtime.c)
 (action
  (run
   riscv64-linux-gnu-gcc
   -march=rv64gc
   -mabi=lp64d
   -O2
   -DEML_RISCV
   -DENABLE_GC
   -c
   %{dep:runtime.c}
   -o
   %{targets})))

(rule
 (targets llvm_runtime.o)
 (deps runtime.c)
 (action
  (run
   riscv64-linux-gnu-gcc
   -march=rv64gc
   -mabi=lp64d
   -O2
   -DEML_LLVM
   -DEML_LLVM_STANDALONE
   -DENABLE_GC
   -c
   %{dep:runtime.c}
   -o
   %{targets})))
